--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/debug": "^4.1.5",
-    "@types/ioredis": "^4.16.4",
+    "@types/express": "^4.17.6",
+    "@types/ioredis": "^4.16.5",
     "@types/lodash": "^4.14.155",
     "@types/set-interval-async": "^1.0.0",
     "@types/uuid": "^8.0.0",
+    "conveyor-mq": "0.0.36",
     "debug": "^4.1.1",
-    "ioredis": "^4.17.3"
+    "express": "^4.17.1",
+    "ioredis": "^4.17.3",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
@@ -37,10 +41,10 @@
     "@typescript-eslint/parser": "^3.1.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "np": "^6.2.3",
